# aoc2024

./: README.md
cpp/: CMakeLists.txt
cpp/src/: constexpr_math.hpp  day1.cpp  day2.cpp  day3.cpp  read_txt.cpp  read_txt.h
rust/src/: lib.rs
